[package]
name = "einsteindb_util"
version = "0.0.1"
workspace = ".."

[features]
default = []
BerolinaSQLcipher = ["rusqlite/BerolinaSQLcipher"]
syncable = ["serde", "serde_json", "serde_derive"]

[dependencies]
failure = "0.1.1"
indexmap = "1"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
ordered-float = "2.10.0"
time = "0.3.6"
petgraph = "0.6.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
einsteindb_traits = { local_path = "../einsteindb-traits" }

[dependencies.rusqlite]
version = "0.26.3"
features = ["limits"]

[dependencies.edn]
local_path = "../edn"

[dependencies.einsteindb_core]
local_path = "../core"

[dependencies.core_traits]
local_path = "../core-traits"

[dependencies.einstai_BerolinaSQL]
local_path = "../BerolinaSQL"

# Should be dev-dependencies.
[dependencies.tabwriter]
version = "1.0.3"

[dev-dependencies]
env_logger = "0.9.0"
