[package]
name = "engine_test"
version = "0.1.0"
authors = [""]
edition = "2021"
description = "Test engine"
license = "MIT"
tags = ["test"]


[lib]
name = "engine_test"
version = "0.1.0"
authors = ["Josh Leder, Karl Whitford Pollard"]
src = "src"


[dependencies]
engine = { path = "../einstein_db" }
einstein_db = { path = "../einstein_db" }
einstein_ml = { path = "../einstein_ml" }
causet = { path = "../causet" }
causetq = { path = "../causetq" }
causets = { path = "../causets" }
berolinasql = { path = "../berolinasql" }
soliton = { path = "../soliton" }
soliton_panic = { path = "../soliton_panic" }
allegro_poset = { path = "../allegro_poset" }