[package]
name = "fdb_traits"
version = "0.1.0"
authors = ["EinsteinDB Project Authors"]
edition = "2021"
description = "EinsteinDB Traits for FoundationDB Record Layer"
license = "MIT"
copyright = "Copyright (c) 2020-2021 EinsteinDB Project Authors"
url = "https://github.com/YosiSF/EinsteinDB"




[dependencies]
itertools = "0.10.3"
uuid = "1.1.2"
num-bigint = "0.4.3"
num-traits = "0.2.0"
num-integer = "0.1.45"

#foundationdb
[dependencies.foundationdb]
version = "0.6"
features = ["fdb_record"]


#futures
[dependencies.futures]
version = "0.3"
features = ["futures-preview"]


#tokio
[dependencies.tokio]
version = "1.19.2"
features = ["tokio-preview"]




