[package]
name = "soliton"
version = "0.1.0"
authors = ["EinsteinDB Project"] # ["EinsteinDB Project"]
license = "MIT Licensed"
description = "Soliton is a distributed database system embedded to the EinsteinDB."
edition = "2021"

#target specs

target_os = "windows"
target_arch = "x86"
target_cc = "gcc"
target_cc_version = "4.9"
target_cxx = "g++"
target_cxx_version = "4.9"
target_linker = "g++"
target_linker_version = "4.9"
target_linker_flags = "-lstdc++"


[dependencies]
failure = "0.1.1"
indexmap = "1"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4"
ordered-float = "3.0.0"
time = "0.3.7"
petgraph = "0.6.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_yaml = { version = "0.8.24", optional = true }


