[package]
name = "soliton"
version = "0.1.0"
authors = ["EinsteinDB Project"] # ["EinsteinDB Project"]
license = "MIT Licensed"
description = "Soliton is a distributed database system embedded to the EinsteinDB."
edition = "2021"




[build]
rustflags = ["-L /usr/local/lib"]
rustc-link-lib = ["soliton"]
rustc-link-search = ["/usr/local/lib"]


[dependencies.soliton]
version = "0.1.0"
path = "../soliton"



[dependencies]
failure = "0.1.1"
indexmap = "1"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4"
ordered-float = "3.0.0"
time = "0.3.7"
petgraph = "0.6.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_yaml = { version = "0.8.24", optional = true }




[dependencies.failure]
version = "0.1.1"
path = "../failure"


[dependencies.indexmap]
version = "1"
path = "../indexmap"


[dependencies.itertools]
version = "0.10.3"
path = "../itertools"



[dependencies.lazy_static]
version = "1.4.0"


[dependencies.log]
version = "0.4"

