[package]
name = "soliton_panic"
version = "0.1.0"
description = "Soliton Panic"
edition = "2021"
publish = false
author_email = "karl@einst.ai"
url = "https://www.github.com/YosiSF/EinsteinDB/soliton_panic"
license = "MIT"


[lib]
name = "soliton_panic"


[dependencies.einstein_db]
version = "0.1.0"
path = "../einstein_db"


[dependencies.einstein_db_ctl]
version = "0.1.0"
path = "../einstein_db_ctl"


[dependencies.berolinasql]
version = "0.1.0"
path = "../berolinasql"

[dependencies.einstein_ml]
version = "0.1.0"
path = "../einstein_ml"

[dependencies.allegro_poset]
version = "0.1.0"
path = "../allegro_poset"

[dependencies.causet]
version = "0.1.0"
path = "../causet"













