[package]
name = "soliton_panic"
version = "0.1.0"
description = "Soliton Panic"
edition = "2021"
publish = false
author_email = "karl@einst.ai"
url = "https://www.github.com/YosiSF/EinsteinDB/soliton_panic"
license = "MIT"

[dependencies]
einstein_db = "^0.1.0"
clap = "^3.0"
einsteindb_server = {path = "../einsteindb-server"}
toml = "^0.5.9"
