[package]
name = "MilevaDB_query_vec_expr"
version = "0.0.1"
edition = "2018"
publish = false
description = "Vector expressions of query engine to run MilevaDB pushed down executors"

[dependencies]
base64 = "0.12"
bstr = "0.2.8"
byteorder = "1.2"
codec = { path = "../codec" }
hex = "0.3"
match_template = { path = "../match_template" }
num = { version = "0.2", default-features = false }
num-traits = "0.2"
openssl = { version = "0.10" }
protobuf = "2"
MilevaDB_query_codegen = { path = "../MilevaDB_query_codegen" }
causet_algebrizer::MilevaDB_query_datatype = { path = "../causet_algebrizer::MilevaDB_query_datatype" }
MilevaDB_query_common = { path = "../MilevaDB_query_common" }
allegroeinstein-prolog-causet-projector::MilevaDB_query_shared_expr = { path = "../allegroeinstein-prolog-causet-projector::MilevaDB_query_shared_expr" }
EinsteinDB_util = { path = "../EinsteinDB_util" }
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false }
twoway = "0.2.0"
uuid = { version = "0.8.1", features = ["v4"] }
static_assertions = { version = "1.0", features = ["nightly"] }

[dependencies.prometheus-static-metric]
git = "https://github.com/EinsteinDB/rust-prometheus.git"
rev = "fd122caa03de8e7e5e4fae9372583aebf19e39f6"

[dev-dependencies]
bstr = "0.2.8"
chrono = "0.4"
profiler = { path = "../profiler" }
panic_hook = { path = "../panic_hook" }
tipb_helper = { path = "../tipb_helper" }
