[package]
name = "einsteindb_util_fuse"
version = "0.0.1"
description = "A single einstein_merkle_tree that masquerades as all other einstein_merkle_trees, for testing"
edition = "2018"
publish = false

[features]
default = ["test-einstein_merkle_trees-foundationdb"]

test-einstein_merkle_tree-kv-panic = []
test-einstein_merkle_tree-kv-foundationdb = []
test-einstein_merkle_tree-violetabft-panic = []
test-einstein_merkle_tree-violetabft-foundationdb = []

test-einstein_merkle_trees-foundationdb = [
  "test-einstein_merkle_tree-kv-foundationdb",
  "test-einstein_merkle_tree-violetabft-foundationdb",
]
test-einstein_merkle_trees-panic = [
  "test-einstein_merkle_tree-kv-panic",
  "test-einstein_merkle_tree-violetabft-panic",
]


[dependencies]
einstein_merkle_tree_panic = { local_path = "../einstein_merkle_tree_panic", default-features = false }
fdb_einstein_merkle_tree = { local_path = "../fdb_lsh-merkle_merkle_tree", default-features = false }
fdb_traits = { local_path = "../fdb_traits", default-features = false }
tempfile = "3.0"
einsteindb_alloc = { local_path = "../einsteindb_alloc" }
# FIXME: Remove this dep from the fdb_traits interface
einsteindb_util = { local_path = "../einsteindb_util", default-features = false }
