[package]
name = "einstein_db_ctl"
version = "0.1.0"
edition = "2021"

[dependencies]
einstein_db = "0.1.0"


# Language: toml
# Path: einstein_db/einstein_db/Cargo.toml
[package]
name = "einstein_db"
version = "0.1.0"
edition = "2021"
chrono = "0.4"
crossbeam = "0.8"
tempfile = "3.0"
clap = "2.32"
structopt = "0.3"
futures = "0.3"
tokio = { version = "1.5", features = ["rt-multi-thread", "time"] }
gag = "1.0"
grpcio = { version = "0.10",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
hex = "0.4.3"
libc = "0.2"
nix = "0.23"
rand = "0.8"
regex = "1"
serde_json = "1.0"
toml = "0.5"
