[package]
name = "einsteindb_util_fuse"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
file = { local_path = "../file", default-features = false }
protobuf = "2"
thiserror = "1.0"
serde = "1.0"
slog = "2.7.0 + nightly"
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }



[dependencies.fail]
version = "0.5"

[dev-dependencies]
toml = "0.5"
serde_derive = "1.0"
