[package]
name = "embedded_promises"
version = "0.0.1"
workspace = "../../src/causet"

[lib]
name = "embedded_promises"
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0.7"
lazy_static = "0.2"
indexmap = "1"
ordered-float = { version = "0.5", features = ["serde"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]