[package]
name = "eeinsteindbn"
version = "0.1.0"
authors = ["Josh Leder <slushie@gmail.com>", "Karl Whitford<karl@einsteineinsteindb.com>"]
workspace = "../.."

license = "Apache-2.0"
repository = "https://github.com/yosisf/Einsteineinsteindb"
description = "Prolog parser for Einsteineinsteindb"
build = "build.rs"
readme = "./README.md"

[dependencies]
chrono = "0.4"
itertools = "0.7"
num = "0.1"
ordered-float = "0.5"
pretty = "0.2"
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"

[features]
serde_support = ["serde", "serde_derive"]

[build-dependencies]
peg = "0.5"
