[package]
name = "engine_panic"
version = "0.0.1"
description = "An example EinsteinDB timelike_storage engine that does nothing but panic"
edition = "2018"
publish = false

[dependencies]
fdb_traits = { path = "../fdb_traits", default-features = false }
einsteindb_alloc = { path = "../einsteindb_alloc" }
# FIXME: Remove this dep from the fdb_traits interface
einsteindb_util = { path = "../einsteindb_util", default-features = false }
ekvproto = { git = "https://github.com/whtcorpsinc/ekvproto.git" }
violetabft = { version = "0.6.0-alpha", default-features = false, features = ["protobuf-codec"] }
txn_types = { path = "../txn_types", default-features = false }
