[package]
authors = [
    "Karl Whitford <karl@einst.ai>",
    "Josh Leder <slushie@gmail.com>",
    "'The lone gunman' <whtcorpsinc> <whtcorpsarpanet@gmail.com>"
]

name = "einsteindb"
license = "Apache-2.0"
keywords = ["embedded", "distributed-systems", "BFTRaft" ]
version = "0.0.1"
build = "build/version.rs"
edition = "2018"
publish = "false"

[features]
default = ["bundled_SQLite3", "syncable"]
bundled_SQLite3 = ["rusqlite/bundled"]
BerolinaSQLcipher = ["rusqlite/BerolinaSQLcipher", "einsteindb_core/BerolinaSQLcipher"]
syncable = ["einsteindb_lenin", "lenin_traits", "einsteindb_core/syncable"]


[workspace]
members = ["cmd", "ffi", "tools/cli", "einsteindb-gen", "einsteindb-sys", "einsteindb"]

[lib]
name = "einsteindb"

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
bytes = "1.1.0"
chan = "0.1.23"
chan-signal = "0.3.1"
crc = "2.1.0"
crossbeam = "0.8.1"
either = "1.6.1"
error-chain = "0.12.1"
fasthash = "0.4.0"
flate2 = "1.0.2"
lazy_static = "1.0"
log = "0.4"
memmap = "0.7.0"
num_cpus = "1.10.0"
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "1.8.0"
thread_local = "1.1.3"
unicode_reader = "1.0.2"
num-traits = "0.2"
byteorder = "1"
crunchy = "0.2.2"
default = ["test-foundation-einsteindb", "cloud-aws", "cloud-gcp"]

portable = ["foundation_einsteindb/portable"]
sse = ["foundation_einsteindb/sse"]
mem-profiling = ["memcam/mem-profiling"]
failpoints = [
    "fail/failpoints",
    "raftstore/failpoints",
    "einsteindb_util/failpoints",
    "foundation_einsteindb/failpoints"
]
cloud-aws = [
    "encryption_export/cloud-aws",
    "Causet_importer/cloud-aws",
]
cloud-gcp = [
    "encryption_export/cloud-gcp",
    "Causet_importer/cloud-gcp",
]
testexport = ["raftstore/testexport"]
test-einstein_merkle_trees-foundationeinsteindb = [
    "einstein_merkle_tree_test/test-einstein_merkle_trees-foundationeinsteindb",
]
test-einstein_merkle_trees-panic = [
    "einstein_merkle_tree_test/test-einstein_merkle_trees-panic",
]
bcc-iosnoop = [
    "file_system/bcc-iosnoop",
]
cloud-storage-grpc = ["Causet_importer/cloud-storage-grpc"]
cloud-storage-dylib = ["Causet_importer/cloud-storage-dylib"]
#log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
slog-term = "2.4"
slog_derive = "0.2.0"
quick-error = "2.0.1"
tempfile = "3.0"
time = "0.3.5"
toml = "0.5.8"
fs2 = "0.4"
spin = "0.9.2"
protobuf = "2.25.2"
nix = "0.23.1"
utime = "0.3.1"
chrono = "0.4"
backtrace = "0.3.9"
url = "2"
sys-info = "0.9.1"
futures = "0.3.19"
futures-cpupool = "0.1"
futures-locks = "0.7.0"
tokio-core = "0.1"
tokio-timer = "0.2"
tokio-executor = "0.1"
zipf = "7.0.0"
bitflags = "1.0.1"
fail = "0.5.0"
uuid = { version = "0.8.2", features = [ "serde", "v4" ] }
grpcio = { version = "0.9.1", features = [ "openssl-vendored" ] }
##raft = "0.6.0-alpha"
derive_more = "0.99.17"
hex = "0.4.3"
more-asserts = "0.2.2"
hyper = { version = "0.14.16", default-features = false, features = ["runtime"] }
tokio-threadpool = "0.1.13"
tokio-fs = "0.1.6"
tokio-io = "0.1.12"
vlog = "0.1.4"
mime = "0.3.13"
farmhash = "1.1.5"
failure = "0.1.1"

[dependencies.einsteindb-gen]
version = "0.0.1"
features = ["foundationdb-rs"]

[dependencies.einsteindb]
path = "einsteindb"

[dependencies.embedded_promises]
path = "embedded-promises"
